sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/Swift_Weight_Survey__c.object-meta.xml
<CustomObject>
    <label>Swift Weight Survey</label>
    <nameField>
        <label>Swift Weight Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swift Weight surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>