sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <label>Images</label>
    <type>Url</type>
</CustomField>