sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/fields/Pics__c.field-meta.xml
<CustomField>
    <fullName>Pics__c</fullName>
    <formula>Images__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pics</label>
    <type>Text</type>
</CustomField>