sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/fields/Toiet__c.field-meta.xml
<CustomField>
    <fullName>Toiet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Swift Weight surveys</relationshipLabel>
    <relationshipName>Swift_Weight_surveys</relationshipName>
    <type>Lookup</type>
</CustomField>