sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/fields/Transfer_Station__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Station__c</fullName>
    <label>Transfer Station</label>
    <length>125</length>
    <type>Text</type>
</CustomField>