sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/fields/Weight_of_faeces__c.field-meta.xml
<CustomField>
    <fullName>Weight_of_faeces__c</fullName>
    <label>Weight of faeces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>