sfSandBoxCode/force-app/main/default/objects/Swift_Weight_Survey__c/listViews/Toilets.listView-meta.xml
<ListView>
    <fullName>Toilets</fullName>
    <columns>NAME</columns>
    <columns>Toiet__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toilets</label>
    <language>en_US</language>
</ListView>